force-app/main/default/objects/cgcloud__Route__c/cgcloud__Route__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the route object.</description>
    <label>Route</label>
    <nameField>
        <label>Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>