force-app/main/default/objects/cgcloud__Route__c/fields/cgcloud__Default_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default_Start_Time__c</fullName>
    <defaultValue>&apos;08:00&apos;</defaultValue>
    <description>Default start time of first call of the respective tour</description>
    <label>Default Start Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>