force-app/main/default/objects/cgcloud__Route__c/fields/cgcloud__Default_User__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default user (driver) of the route</description>
    <label>Default User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Routes</relationshipName>
    <type>Lookup</type>
</CustomField>