force-app/main/default/objects/cgcloud__Route__c/fields/cgcloud__Route_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Route_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the route template</description>
    <label>Route Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Route_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Route_Template__c</referenceTo>
    <relationshipLabel>Routes</relationshipLabel>
    <relationshipName>Routes</relationshipName>
    <type>Lookup</type>
</CustomField>