force-app/main/default/objects/cgcloud__Route__c/fields/cgcloud__Start_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Start_Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Start Warehouse</description>
    <label>Start Warehouse</label>
    <referenceTo>cgcloud__Warehouse__c</referenceTo>
    <relationshipLabel>Routes</relationshipLabel>
    <relationshipName>Routes</relationshipName>
    <type>Lookup</type>
</CustomField>