force-app/main/default/objects/cgcloud__Route__c/fields/cgcloud__Trailer_1__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Trailer_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>First default trailer.</description>
    <inlineHelpText>Please select vehicles of the type Trailer.</inlineHelpText>
    <label>Trailer 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Vehicle__c.cgcloud__Vehicle_Type__c</field>
            <operation>equals</operation>
            <value>Trailer</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Vehicle__c</referenceTo>
    <relationshipLabel>Routes (Trailer 1)</relationshipLabel>
    <relationshipName>Routes1</relationshipName>
    <type>Lookup</type>
</CustomField>