force-app/main/default/objects/cgcloud__Route__c/fields/cgcloud__Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_From__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>First date of validity period of the route</description>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>