force-app/main/default/objects/cgcloud__Route__c/validationRules/cgcloud__Route_Field_Validation_1.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Route_Field_Validation_1</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
      ISPICKVAL(cgcloud__Route_Template__r.cgcloud__Tour_Template__r.cgcloud__Consider_Vehicle__c ,&apos;Truck&apos;),
      ISBLANK( cgcloud__Default_Truck__c )
      )</errorConditionFormula>
    <errorMessage>The Default Truck can&apos;t be empty.</errorMessage>
</ValidationRule>