force-app/main/default/objects/cgcloud__Route__c/validationRules/cgcloud__Route_Field_Validation_2.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Route_Field_Validation_2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
      ISPICKVAL(cgcloud__Route_Template__r.cgcloud__Tour_Template__r.cgcloud__Consider_Vehicle__c ,&apos;TruckTrailer&apos;),
      OR(
      ISBLANK( cgcloud__Default_Truck__c ),
      ISBLANK( cgcloud__Trailer_1__c )
      )
      )</errorConditionFormula>
    <errorMessage>The Default Truck and the Trailer 1 can&apos;t be empty.</errorMessage>
</ValidationRule>