force-app/main/default/objects/cgcloud__Route__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Description__c</columns>
    <columns>cgcloud__Default_User__c</columns>
    <columns>cgcloud__Route_Template__c</columns>
    <columns>cgcloud__Valid_From__c</columns>
    <columns>cgcloud__Valid_Thru__c</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>